SERVER-27271 rolesInfo returns duplicate "roles" fields